--- a/index.html
+++ b/index.html
@@ -7,30 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main-content">
-        <div class="first-box">
-            Header Logo
+    <div class="header">
+        <div class="header-top">
+            <div class="nav-bar">Header Logo</div>
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
-            </ul>
+                </ul>
+            </div>
         </div>
-        <div class="second-box">
-            <p>Some random information.</p>
+        <div class="headerbody">
+            <div class="hbleft">
+                <div class="title">
+                    This Website is Awesome
+                </div>
+                <div class="sub-text">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                </div>
+                <div class="header-button">
+                    <button>Sign Up</button>
+                </div>
+            </div>
+            <div class="hbright">
+                <img src>
+            </div>
         </div>
-        <div class="third-box">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
-        </div>
-        <div class="fourth-box">
-            <p>Call to action! It's time!</p>
-            <p>sign up for our product by clicking that button right over there</p>
-            <button>Sign up</button>
-        </div>
-    </div>
-    <div class="footer">
-        <p>Copyright © Nicholas D 2025</p>
     </div>
 </body>
 </html>
