changed the names of the classes so it is easier to understand

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header-top">
-            <div class="nav-bar">Header Logo</div>
+    <div class="Header">
+        <div class="Headertop">
+            <div class="header logo">Header Logo</div>
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
@@ -21,11 +21,12 @@
                 <div class="title">
                     This Website is Awesome
                 </div>
-                <div class="sub-text">
+                <div class="titlesub">
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                 </div>
-                <div class="header-button">
-                    <button>Sign Up</button>
+                    <button>
+                        Sign Up
+                    </button>
                 </div>
             </div>
             <div class="hbright">
