--- a/index.html
+++ b/index.html
@@ -3,36 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>1 on 1 coding</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"></head>
 <body>
-    <div class="Header">
-        <div class="Headertop">
-            <div class="header logo">Header Logo</div>
+    <div class="header">
+        <div class="headertop">
+            <div class="logo">1-on-1 Coding</div>
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
         <div class="headerbody">
             <div class="hbleft">
-                <div class="title">
-                    This Website is Awesome
-                </div>
-                <div class="titlesub">
-                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
-                </div>
-                    <button>
-                        Sign Up
-                    </button>
-                </div>
+                <div class="title">Let's become programmers</div>
+                <div class="description">From zero to hero!We have experts in every coding language.<br>It's time to learn some coding!!!</div>
+                <button class="btn">Start Learning</button>
             </div>
             <div class="hbright">
-                <img src>
+                <img src="./image/coding.jpg" alt="coding image">
             </div>
         </div>
-    </div> 
+    </div>
+    <div class="section2">
+        <div class="h2">Your future starts today</div>
+    </div>
 </body>
 </html>
