Updated the html structure

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="headerbody">
             <div class="hbleft">
-                <div class="title">Let's become programmers</div>
-                <div class="description">From zero to hero!We have experts in every coding language.<br>It's time to learn some coding!!!</div>
+                <div class="title">Let's Become Programmers</div>
+                <div class="description">From zero to hero! We have experts in every coding language.<br>It's time to learn some coding!!!</div>
                 <button class="btn">Start Learning</button>
             </div>
             <div class="hbright">
@@ -27,8 +27,44 @@
             </div>
         </div>
     </div>
-    <div class="section2">
-        <div class="h2">Your future starts today</div>
+    <p class="information-header">Your future starts today</p>
+    <div class="section-two">
+        <div class="box-one">
+            <img class="info-pics" src="./image/info-one.jpg">
+            <p>Code with Experts</p>
+        </div>
+        <div class="box-two">
+            <img class="info-pics" src="./image/info-two.jpg">
+            <p>Hands On Learning</p>
+        </div>
+        <div class="box-three">
+            <img class="info-pics" src="./image/info-three.jpg">
+            <p>Tailored to You</p>
+        </div>
+        <div class="box-four">
+            <img class="info-pics" src="./image/info-four.jpg" >
+            <p>Build Your Portfolio</p>
+        </div>
+    </div>
+    <div class="quote-section">
+        <div class="quote-text">
+            <p>Programming isn't about what you know; it's about what you can figure out.</p>
+            <p class="author">-Christ Pine</p>
+        </div>
+    </div>
+    <div class="section-four">
+        <div class="action-box">
+            <div class="aleft">
+                <p class="action-title">Call to action! It's time to code!</p>
+                <p>Sign up today and start learning over here !</p>
+            </div>
+            <div class="aright">
+                <button class=action-button>Sign Up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Copyright © Nicholas Do 2025</p>
     </div>
 </body>
 </html>
